@@ -1,3 +1,10 @@
+Wed Jul 30 22:36:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	  - New conversations can now be started from the buddy list.
+	  - Greyed out buttons that aren't currently setup to be used.
+
 Wed Jul 30 19:36:56 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
